# fatigue-detect

./: CMakeLists.txt  Makefile  README.md  detect.cpp  eyedetect.cpp  facedetect.cpp  flowcatch.cpp  readsenior.cpp  recmake.sh  show.cpp
include/: people.hpp  victor.h
